# umi-checker

./: .pre-commit-config.yaml  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
src/: io.rs  lib.rs  main.rs  matcher.rs  processing.rs
tests/: integration_test.rs
tests/data/: example.bam  example.fastq  example.umi10.fastq
