[package]
name = "umi-checker"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
needletail = "0.6.3"
rayon = "1.7"
anyhow = "1.0"
indicatif = "0.18.3"
rust-htslib = { version = "*", default-features = false }
flate2 = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1.3"
tempfile = "3"
